--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,71 @@
-name: Test CI
+name: CI/CD to GKE
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
+  workflow_dispatch:  # Allows manual triggering for testing
+
+env:
+  REGION: us-central1
+  REPOSITORY: django-repo
+  IMAGE_NAME: django-celery-app
 
 jobs:
-  test:
+  build-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Echo
-        run: echo "It works!"
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Validate Secrets
+        run: |
+          set -e
+          if [ -z "${{ secrets.GCP_PROJECT }}" ] || [ -z "${{ secrets.GCP_SA_KEY }}" ]; then
+            echo "❌ Required secrets (GCP_PROJECT or GCP_SA_KEY) are missing"
+            exit 1
+          fi
+          echo "✅ Secrets found"
+
+      - name: Set up gcloud CLI
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: ${{ secrets.GCP_PROJECT }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Configure Docker for Artifact Registry
+        run: |
+          gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev
+
+      - name: Build and Push Docker Image
+        id: build
+        run: |
+          set -e
+          IMAGE="${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}"
+          echo "🔧 Building Docker image: $IMAGE"
+          docker build -t "$IMAGE" .
+          docker push "$IMAGE"
+          echo "IMAGE=$IMAGE" >> $GITHUB_ENV
+
+      - name: Deploy to GKE
+        run: |
+          set -e
+          echo "🚀 Deploying to GKE using image: $IMAGE"
+
+          # Confirm GCP authentication
+          gcloud auth list
+          gcloud config list project
+
+          # ⚠️ Confirm your GKE cluster zone (e.g. us-central1-a)
+          gcloud container clusters get-credentials django-celery-minimal \
+            --zone us-central1-a \
+            --project ${{ secrets.GCP_PROJECT }}
+
+          # Confirm kubectl is authenticated
+          kubectl cluster-info
+          kubectl get nodes
+
+          # Deploy image
+          kubectl set image deployment/django-web django-web=$IMAGE
+          kubectl rollout status deployment/django-web
